added command to readme